tests/lit/syntax/error_for1.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_for1.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_for1.silly:11:11: error: Undeclared variable j
// CHECK:    11 |     PRINT j;
// CHECK:       |           ^

FOR (INT32 i: (0, 3)) {
    FOR (INT32 j: (0, 2)) {
        PRINT "more";
    };
    PRINT j;
};
